<resources>
    <string name="app_name">OneStopBase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">One Stop Statistics </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_players">Players</string>
    <string name="menu_teams">Teams</string>
    <string name="title_account">Account</string>
    <string name="title_favourite">Favourites</string>
</resources>