<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_players"
            android:title="@string/menu_players" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_teams"
            android:title="@string/menu_teams" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/title_favourite" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/title_account" />
    </group>
</menu>